--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fildomains/fns-contracts",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "FNS contracts",
   "scripts": {
     "test": "hardhat test --network hardhat",
@@ -35,6 +35,7 @@
     "@openzeppelin/test-helpers": "^0.5.11",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.0",
+    "@types/pako": "^2.0.0",
     "chai": "^4.3.4",
     "dotenv": "^10.0.0",
     "elliptic-solidity": "^1.0.0",
