--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ancjf/logs": "^1.0.3",
     "@ensdomains/dnsprovejs": "^0.3.7",
     "@ensdomains/test-utils": "^1.3.0",
+    "@fildomains/fnsjs": "^0.52.3",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
@@ -61,7 +62,6 @@
     "js-sha3": "0.8.0"
   },
   "dependencies": {
-    "@ensdomains/ensjs": "3.0.0-alpha.45",
     "@ensdomains/eth-ens-namehash": "^2.0.15",
     "@openzeppelin/contracts": "4.8.0",
     "dns-packet": "^5.3.0",
