--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@ancjf/logs": "^1.0.3",
     "@ensdomains/dnsprovejs": "^0.3.7",
     "@ensdomains/test-utils": "^1.3.0",
-    "@fildomains/fnsjs": "^0.52.3",
+    "@fildomains/fnsjs": "0.52.5",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
